--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "node-red": "^3.1.0",
-    "node-red-dashboard": "^3.6.6"
+    "node-red-dashboard": "^3.6.6",
+    "node-red-contrib-google-sheets": "^1.0.0"
   },
   "scripts": {
     "start": "node-red --settings settings.js"
